<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FloatingActionButton"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/url_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_fab"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/fab_license" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="PageIndicatorView"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/url_piv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_piv"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/piv_license" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="CheckBox"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/url_ccb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_ccb"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/fab_license" />

    </LinearLayout>

</ScrollView>